<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.OtpFragment"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvCountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="8dp"
        android:text="@string/_91"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="8dp"
        android:text="@string/_9999999999"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvMobileNumber"
        app:layout_constraintTop_toTopOf="@id/tvCountryCode" />

    <TextView
        android:id="@+id/tvOtpTitle"
        android:layout_width="144dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/enter_the_otp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCountryCode" />
    <EditText
        android:id="@+id/etOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:background = "@drawable/edit_text_background"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOtpTitle" />

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOtp">

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/_continue"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            app:backgroundTint="@color/yellow" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/black"
            android:visibility="invisible" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/_01_00"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button_layout"
        app:layout_constraintTop_toBottomOf="@+id/etOtp" />

    <Button
        android:id="@+id/btnResendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:padding="8dp"
        android:visibility="invisible"
        android:text="@string/resend_otp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_layout"
        app:layout_constraintTop_toBottomOf="@+id/etOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>