<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.PhoneNumberFragment"
    android:padding="30dp">


    <TextView
        android:id="@+id/tvGetOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="8dp"
        android:text="@string/get_otp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhoneTitle"
        android:layout_width="220dp"
        android:layout_height="72dp"
        android:layout_margin="8dp"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGetOtp" />

    <EditText
        android:id="@+id/etCountryCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/_91"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneTitle" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/_9999999999"
        android:textSize="18sp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/etCountryCode"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneTitle" />


    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber">

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/_continue"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            app:backgroundTint="@color/yellow" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/black"
            android:visibility="invisible" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>