<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.NotesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Invites Section -->
            <TextView
                android:id="@+id/textInvites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/notes"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textPersonalMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/personal_messages_to_you"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInvites" />


            <!-- Horizontal RecyclerView for Invites -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerInvites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/textLikesYou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPersonalMsg" />

            <!-- Text "Likes You" -->
            <ProgressBar
                android:id="@+id/invites_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="89dp"
                android:indeterminateTint="@color/black"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/textLikesYou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPersonalMsg"
                app:layout_constraintVertical_bias="0.122" />

            <TextView
                android:id="@+id/textLikesYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/interested_in_you"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/layoutPremiumMembers"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Premium Members Box -->

            <RelativeLayout
                android:id="@+id/layoutPremiumMembers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/recyclerLikes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_toStartOf="@+id/btnUpgrade"
                    android:text="@string/premium_members_can_view_all_their_likes_at_once"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnUpgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_background"
                    android:text="@string/upgrade"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:backgroundTint="@color/yellow" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerLikes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutPremiumMembers"
                app:spanCount="2" />

            <ProgressBar
                android:id="@+id/likes_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:indeterminateTint="@color/black"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutPremiumMembers" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>